[package]
name = "measure-wasm-dedupe-wins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
blake3 = "1.2.0"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.25"
walkdir = "2.3.2"
wasmparser = "0.81.0"

[patch.crates-io]
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools.git" }
